<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="viewModel"
            type="com.pented.learningapp.helper.JustCopyItVIewModel" />
    </data>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authScreens.RegisterYourselfSecondActivity">

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/heading_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/back"
            android:textColor="@color/heading_gray"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_register_yorself_bg"
        android:orientation="vertical" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:paddingStart="@dimen/_35sdp"
        android:paddingEnd="@dimen/_35sdp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_above="@+id/llIndicator"
            android:paddingBottom="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/enter_other_details"
                    android:textColor="@color/heading_gray"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/please_enter_other_details"
                    android:textColor="@color/secondary_gray"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="Step 2 of 2"
                    android:textColor="@color/heading_gray"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/personal_details"
                    android:textColor="@color/heading_gray"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="@dimen/_11sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_photo"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_regular"
                            android:text="@string/upload_pro_pic"
                            android:textColor="@color/secondary_gray"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_regular"
                            android:text="@string/use_cam_or_upload"
                            android:textColor="@color/secondary_gray"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/edittext_bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/enter_your_email_id"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_regular"
                        android:textColorHint="@color/secondary_gray"
                        android:layout_marginLeft="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/edittext_bg">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:inputType="text"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:gravity="top"
                        android:hint="@string/about_yourself"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_regular"
                        android:textColorHint="@color/secondary_gray"
                        android:layout_margin="@dimen/_10sdp"/>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/security_ques"
                    android:textColor="@color/heading_gray"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/we_will_use_this_answer"
                    android:textColor="@color/secondary_gray"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:weightSum="1"
                    android:background="@drawable/edittext_bg">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:src="@drawable/ic_que_shield"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/add_your_security_que"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_regular"
                        android:textColorHint="@color/secondary_gray"
                        android:layout_marginLeft="@dimen/_10sdp"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:src="@drawable/ic_dropdown_arrow"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/edittext_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="phone"
                        android:hint="@string/type_your_ans_here"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_regular"
                        android:textColorHint="@color/secondary_gray"
                        android:layout_marginLeft="@dimen/_10sdp"/>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:paddingBottom="@dimen/_30sdp">

                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/resend_btn_bg"
                        android:layout_toStartOf="@+id/btnContinue"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_20sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/skip_this_step"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/nunito_semibold"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/button_bg"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="@dimen/_12sdp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/llIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_inactive_dot"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_active_dot"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
</layout>