<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linearChoose"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lilTakePhoto"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/NormalText600"
                android:text="@string/take_photo"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E5E5E5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/lilChoosePhoto"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/NormalText600"
                android:text="@string/choose_photo"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/lilCancel"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12ssp"
            style="@style/BoldText" />
    </LinearLayout>
</LinearLayout>